--- a/public/assets/scss/partials/_content.scss
+++ b/public/assets/scss/partials/_content.scss
@@ -5029,6 +5029,6 @@ body.farmers-open {
 }
 
 .sv-thankyou-image {
-  height: 500px;
+  height: 550px;
   margin-bottom: -60px;
 }
