--- a/public/assets/scss/partials/_extrasmall.scss
+++ b/public/assets/scss/partials/_extrasmall.scss
@@ -832,6 +832,7 @@
   }
 
   .sv-thankyou-image {
+    height: 250px;
     margin-bottom: -30px;
   }
 
